pagination spacing and styling got thrown off in passenger and driver index paths, corrected css to fit styling.

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -299,7 +299,7 @@ input[type=submit]:active {
   text-align: center;
   padding: 1em;
   cursor: default;
-  margin-top: 1.8em;
+  margin-top: .2em;
 }
 
 .pagination a, .pagination span {
