--- a/app/assets/stylesheets/drivers.scss
+++ b/app/assets/stylesheets/drivers.scss
@@ -50,9 +50,17 @@
 .c4 p {
   margin-left: 2em;
 }
+
+.c4 h3 {
+  margin-bottom: 0em;
+}
+
 .trips-list{
   margin-top: -.3em;
+  padding-top: 1em;
+  padding-bottom: 1em;
 }
+
 .trips-list:nth-child(odd){
   padding-top: .2em;
   padding-bottom: .2em;
@@ -60,4 +68,42 @@
   margin-left: 1.6em;
   margin-right: 2em;
   background-color: rgba(165, 177, 194,1.0);
+}
+
+/* PAGINATION STYLING */
+.driver-pagination {
+  background: rgba(0, 0, 0, 0);
+  text-align: center;
+  padding: 1em;
+  cursor: default;
+  margin-top: 2em;
+}
+
+.driver-pagination a, .driver-pagination span {
+  padding: 0.2em 0.3em;
+}
+
+.driver-pagination .disabled {
+  display: none;
+}
+
+.driver-pagination .current {
+  font-style: normal;
+  font-weight: bold;
+  background-color: rgba(130, 204, 221,1.0);
+  display: inline-block;
+  width: 1.4em;
+  height: 1.4em;
+  line-height: 1.5;
+  -moz-border-radius: 1em;
+  -webkit-border-radius: 1em;
+  border-radius: 1em;
+  text-shadow: rgba(0, 0, 0, 0.25) 1px 1px 1px;
+}
+.driver-pagination a {
+  text-decoration: none;
+  color: rgba(10, 61, 98,1.0);
+}
+.driver-pagination a:hover, .pagination a:focus {
+  text-decoration: underline;
 }
