--- a/app/assets/stylesheets/passengers.scss
+++ b/app/assets/stylesheets/passengers.scss
@@ -61,3 +61,41 @@
   margin-right: 2em;
   background-color: rgba(165, 177, 194,1.0);
 }
+
+/* PAGINATION STYLING */
+.passenger-pagination {
+  background: rgba(0, 0, 0, 0);
+  text-align: center;
+  padding: 1em;
+  cursor: default;
+  margin-top: 2em;
+}
+
+.passenger-pagination a, .passenger-pagination span {
+  padding: 0.2em 0.3em;
+}
+
+.passenger-pagination .disabled {
+  display: none;
+}
+
+.passenger-pagination .current {
+  font-style: normal;
+  font-weight: bold;
+  background-color: rgba(130, 204, 221,1.0);
+  display: inline-block;
+  width: 1.4em;
+  height: 1.4em;
+  line-height: 1.5;
+  -moz-border-radius: 1em;
+  -webkit-border-radius: 1em;
+  border-radius: 1em;
+  text-shadow: rgba(0, 0, 0, 0.25) 1px 1px 1px;
+}
+.passenger-pagination a {
+  text-decoration: none;
+  color: rgba(10, 61, 98,1.0);
+}
+.passenger-pagination a:hover, .passenger-pagination a:focus {
+  text-decoration: underline;
+}
